mass-cfg-attr-tests/tests/failing_no_mass_cfg_attr/struct_with_named_fields.stderr
error: use of deprecated field `ThreeInts::first`
  --> tests/failing_no_mass_cfg_attr/struct_with_named_fields.rs:17:9
   |
17 |         first: 1,
   |         ^^^^^^^^
   |
note: the lint level is defined here
  --> tests/failing_no_mass_cfg_attr/struct_with_named_fields.rs:1:26
   |
1  | #![deny(unused_must_use, deprecated)]
   |                          ^^^^^^^^^^

error: use of deprecated field `ThreeInts::second`: testing key-value
  --> tests/failing_no_mass_cfg_attr/struct_with_named_fields.rs:18:9
   |
18 |         second: 2,
   |         ^^^^^^^^^

error: use of deprecated field `ThreeInts::third`: this is a more complex example
  --> tests/failing_no_mass_cfg_attr/struct_with_named_fields.rs:19:9
   |
19 |         third: 3
   |         ^^^^^^^^

error: unused `ThreeInts` that must be used
  --> tests/failing_no_mass_cfg_attr/struct_with_named_fields.rs:16:5
   |
16 | /     ThreeInts {
17 | |         first: 1,
18 | |         second: 2,
19 | |         third: 3
20 | |     };
   | |______^
   |
note: the lint level is defined here
  --> tests/failing_no_mass_cfg_attr/struct_with_named_fields.rs:1:9
   |
1  | #![deny(unused_must_use, deprecated)]
   |         ^^^^^^^^^^^^^^^
